# openclawapp

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-remote-architecture.md  README-zh.md  README.md  SECURITY.md  docker-compose.yml  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  deploy-worker.yml
apps/: README.md
apps/desktop/: README-zh.md  README.md  vite.config.js
apps/desktop/scripts/: build-mac-dmg.sh
apps/mobile/: README.md
apps/server/: README.md  package.json
desktop/: README-zh.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/extensions/openclaw-mobile/: index.ts  openclaw.plugin.json  package.json
desktop/scripts/: build-mac-dmg.sh  prepare-kernel.mjs  prepare-kernel.ts  render-dmg-background.swift
desktop/src/: App.tsx  app.js  app.ts  legacy-app.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: app_paths.rs  config_store.rs  dashboard_gateway.rs  main.rs  pair_backend.rs
desktop/src-tauri/src/pair_backend/: auth.rs  bridge.rs  chat.rs  commands.rs  helpers.rs  signal.rs
desktop/src/hooks/: useLegacyBridge.ts
desktop/src/legacy/: dom-refs.ts  event-binder.ts  i18n-catalog.ts  openclaw-device-identity.ts  openclaw-gateway-client.ts  openclaw-session.ts  pair-backend-controller.ts  pair-backend-model.ts  pair-backend-qr.ts  pair-background-window.ts  pair-controller.ts  pair-ui.ts  provider-controller.ts  provider-presets.ts  register-store-actions.ts  setup-controller.ts  setup-form-sync.ts  shell-controller.ts
desktop/src/pairing/: api-client.js  controller.js  state-machine.js
desktop/src/store/: useDesktopShellStore.ts
docs/: README.md  remote-pairing-crdt-v3.md  remote-pairing-mvp.md  remote-pairing-v2-protocol.md  remote-pairing-v2.md  server-docker-deploy.md  three-end-system-design.md
mobile/: App.tsx  README.md  app.json  capacitor.config.ts  index.html  metro.config.js  package.json  styles.css  tsconfig.json
mobile-rn/: README.md  app.json  package.json
mobile-rn/src/screens/: ConversationListScreen.tsx  ConversationScreen.tsx  PairingScreen.tsx
mobile-rn/src/state/: SessionsContext.tsx
mobile-rn/src/types/: session.ts
mobile/ios/: Podfile
mobile/ios/OpenClawMobile/: Info.plist
mobile/ios/OpenClawMobile.xcodeproj/: project.pbxproj
mobile/ios/OpenClawMobile.xcworkspace/: contents.xcworkspacedata
mobile/ios/Podspecs/: JitsiWebRTC.podspec  ZXingObjC.podspec
mobile/src/: main.ts
scripts/: build-mac-dmg.sh  prepare-kernel.mjs
server/: .dockerignore  Dockerfile  README.md  go.mod  main.go  package.json  tsconfig.json  v2_ice.go  v2_routes.go  v2_store.go  v2_test.go  v2_types.go  web.go  web_test.go
server-deploy/: .env.example  Caddyfile  docker-compose.yml  trojan.json  turnserver.conf
server-worker/: .dev.vars.example  README.md  package.json  wrangler.toml
server-worker/src/: index.js  pair-v2-hub.js  protocol-site.js  shared.js
server/openapi/: openapi.yaml
server/src/: check-openapi.mjs  http.mjs  index.mjs  index.ts  router.mjs  store.ts  ws.ts
server/web/: index.html  styles.css
shared/: pairing-v2-app.ts  pairing-v2-openclaw-chat.ts  pairing-v2-peer.ts  pairing-v2-web.ts
shared/tests/: pair-v2-compat.test.mjs
src/: app.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+35 files in other folders)
