[package]
name = "openclaw-desktop"
version = "0.1.0"
description = "OpenClaw desktop packager based on Tauri"
homepage = "https://openclawapp.dev"
authors = ["OpenClaw Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.8", features = ["dialog-open", "shell-open"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
wry = { path = "../vendor/wry" }
