[package]
name = "openclaw-desktop"
version = "0.1.0"
description = "OpenClaw desktop packager based on Tauri"
homepage = "https://openclawapp.dev"
authors = ["OpenClaw Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.8", features = ["dialog-open", "shell-open"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.19.1"
windows = { version = "0.39.0", features = ["Win32_Foundation"] }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
webkit2gtk = "0.18.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
