[package]
name = "openclaw-desktop"
version = "0.1.0"
description = "OpenClaw desktop packager based on Tauri"
homepage = "https://openclawapp.dev"
authors = ["OpenClaw Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.8", features = ["dialog-open", "shell-open"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.21"
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
tar = "0.4"
webrtc = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.19.1"
windows = { version = "0.39.0", features = ["Win32_Foundation"] }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
webkit2gtk = "0.18.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
